# cargo-backend-template

./: Cargo.toml  compose.yaml  template.env
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/entity/: post.rs
backend/src/service/: mutation.rs  query.rs
src/: main.rs
src/handlers/: mod.rs  post.rs
