[workspace]
members = ["backend"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.5", features = ["macros"] }
backend = { path = "backend" }
clap = { version = "4.5.4", features = ["derive"] }
sea-orm = { version = "0.12.15", features = [
	"debug-print",
	"runtime-tokio-native-tls",
	"sqlx-postgres",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "{{project-name}}"
edition = "2021"

[dependencies]
axum.workspace = true
backend.workspace = true
clap.workspace = true
dotenvy = { version = "0.15.7", features = ["clap"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
