[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }

axum.workspace = true
clap.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
